--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,8 +1,4 @@
 body {
-  margin: 0 auto;
-}
-
-body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1vw;
   margin: 0%;
@@ -29,7 +25,7 @@ body {
 
 .chat {
   position: relative;
-  width: 75vw;
+  width: 55vw;
   box-shadow: 0 0 1vw rgba(0, 0, 0, 0.219);
   height: 32vw;
   overflow-y: hidden;
@@ -83,10 +79,26 @@ body {
   word-wrap: break-word;
 }
 .chat-message__username {
+  transition-duration: 0.2s;
+  cursor: pointer;
   display: flex;
   justify-content: flex-end;
   width: 100%;
-  margin-left: -1vw;
+  margin-left: -1.3vw;
+  font-weight: bold;
+  color: rgb(29, 29, 29);
+}
+.chat-message__avatar {
+  padding: 0.5vw;
+  width: 1.2vw;
+  height: 1.2vw;
+  border-radius: 50%;
+  margin-top: 1vh;
+  margin-right: 1vw;
+  background-color: rgb(34, 145, 242);
+}
+.chat-message__username:hover {
+  color: rgb(92, 92, 92);
 }
 .chat-message_recipient .chat-message__text {
   margin-left: 0vw;
@@ -101,29 +113,20 @@ body {
   display: flex;
   justify-content: flex-start;
   width: 100%;
-  margin-left: 0;
-}
-.chat-message__avatar {
-  padding: 0.5vw;
-  width: 1vw;
-  height: 1vw;
-  border-radius: 50%;
-  margin-right: 1vw;
-  background-color: rgb(34, 145, 242);
+  margin-left: 0.3vw;
 }
 
 .message-form {
   width: 100%;
   height: 2em;
   display: flex;
-  height: 2vw;
   bottom: 0;
   margin: 0;
 }
 
 .message-form__text {
   background-color: rgb(223, 223, 223);
-  width: 80%;
+  width: 65%;
   height: 100%;
   border: none;
   padding: 0 0.5vw;
@@ -132,7 +135,7 @@ body {
 }
 .message-form__name {
   background-color: rgb(223, 223, 223);
-  width: 15%;
+  width: 20%;
   height: 100%;
   border: none;
   border-right: 0.05em solid rgb(148, 148, 148);
@@ -148,7 +151,7 @@ body {
 }
 
 .message-form__button {
-  width: 20%;
+  width: 15%;
   height: 100%;
   background-color: #2291f2;
   color: white;
@@ -157,7 +160,7 @@ body {
   align-items: center;
   cursor: pointer;
   border: none;
-  font-size: 1.5vw;
+  font-size: 1vw;
 }
 
 @media handheld, (max-width: 700px) {
