--- a/src/components/MessageList/messageList.css
+++ b/src/components/MessageList/messageList.css
@@ -1,7 +1,9 @@
 .chat-messages-scroll {
+  position: relative;
   width: 100%;
   height: 30vw;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .chat-messages {
@@ -44,6 +46,16 @@
   max-width: 20vw;
   border-radius: 0.5vw;
   word-wrap: break-word;
+  animation: an 0.5s;
+  transform-origin: right;
+}
+@keyframes an {
+  from {
+    transform: scale(0.5);
+  }
+  to {
+    transform: scale(1);
+  }
 }
 .chat-message__username {
   transition-duration: 0.2s;
@@ -68,6 +80,7 @@
   color: rgb(92, 92, 92);
 }
 .chat-message_recipient .chat-message__text {
+  transform-origin: left;
   margin-left: 0vw;
   background-color: rgba(34, 145, 242, 0.233);
 }
@@ -81,4 +94,11 @@
   justify-content: flex-start;
   width: 100%;
   margin-left: 0.3vw;
+}
+.new-user-added-message {
+  width: 100%;
+  text-align: center;
+  padding: 0.5em 0;
+  position: sticky;
+  top: 0;
 }
